syntax = "proto3";

package org.project_planton.provider.aws.awsdynamodb.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/aws/awsdynamodb/v1/spec.proto";
import "org/project_planton/provider/aws/awsdynamodb/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// AwsDynamodb is the Kubernetes-style resource envelope for a DynamoDB table.
message AwsDynamodb {
  string api_version = 1 [(buf.validate.field).string.const = "aws.project-planton.org/v1"];
  string kind = 2 [(buf.validate.field).string.const = "AwsDynamodb"];
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];
  AwsDynamodbSpec spec = 4 [(buf.validate.field).required = true];
  AwsDynamodbStatus status = 5;
}

// AwsDynamodbStatus captures lifecycle, audit, job linkage, and observable outputs.
message AwsDynamodbStatus {
  //stack-outputs
  AwsDynamodbStackOutputs outputs = 1;
}
